--- a/src/css/Statistics.css
+++ b/src/css/Statistics.css
@@ -57,6 +57,8 @@
 
   
   bottom: 15px;
+
+  border-radius: 15px;
   
 
 }
@@ -64,7 +66,7 @@
 .button-div-s{
   height: 100px;
   width: 300px;
-  margin-bottom: 45px;
+  margin-bottom: 20px;
 }
 
 
