--- a/src/css/GetLocation.css
+++ b/src/css/GetLocation.css
@@ -45,6 +45,11 @@
   
   }
 
+.parenForGetLoc{
+    width: 400px;
+    height: 600px;
+}   
+
 .notNowButton{
     position: absolute; 
     left: 40px;
